--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 <div class="container"> 
 
 <table class="imgtable"><tr><td>
-<a href="./"><img src="images/ruijiaz.png" alt="" height="222px" /></a>&nbsp;</td>
+<a href="./"><img src="images/ruijiaz.jpg" alt="" height="222px" /></a>&nbsp;</td>
 <td align="left"><p><a href="./"><font size="4">Ruijia ZHANG (</font><font size="4"; font style="font-family:Microsoft YaHei">张睿佳</font><font size="4">)</font></a><br />
-<i> Graduate </i>
+<i> Master Student </i>
 <br /><br />
-<a href="https://faxueyuan.lnnu.edu.cn/" target="_blank">School of Law</a>, <a href="https://english.lnnu.edu.cn/" target="_blank">Liaoning Normal University</a><br />
+<a href="https://www.must.edu.mo/en/fl" target="_blank">Faculty of Law</a>, <a href="https://www.must.edu.mo/en" target="_blank">Macau University of Science and Technology</a><br />
 <br />
 <class="staffshortcut">
  <A HREF="#RESEARCH INTEREST">Research Interest</A> | 
@@ -48,13 +48,26 @@ Email: <a href="mailto:ruijia.z@outlook.com" style="color: black;">ruijia.z@outl
 
  
 <A NAME="RESEARCH INTEREST"><h2>RESEARCH INTEREST</h2></A>
-Currently, I focus on the following research topics:
+Currently, I focus on the following research topic:
 <ul>
-  <li>Civil Law</li>
-  <li>Intellectual Property Law</li>
+  <li>International Economic and Commercial Law</li>
 </ul>
 
 <A NAME="EDUCATION"><h2>EDUCATION</h2></A>
+<div>
+  <div style="float:left"><b>Master of International Economic and Commercial Law</b></div>
+  <div style="float:right">Jan 2024 - Now</div>
+</div>
+<div style="clear:both"></div>
+<div>
+  <div style="float:left">
+    <a href="https://www.must.edu.mo/en/fl" target="_blank" style="color: black;">Faculty of Law</a>, <a href="https://www.must.edu.mo/en" target="_blank" style="color: black;">Macau University of Science and Technology</a>
+  </div>
+  <div style="float:right">Macau, China</div>
+</div>
+<br>
+<div style="clear:both"></div>
+<br><br>
 <div>
   <div style="float:left"><b>Bachelor of Law</b></div>
   <div style="float:right">Sep 2017 - Jun 2021</div>
@@ -214,7 +227,7 @@ Currently, I focus on the following research topics:
 </p>
 
 <p style="text-align: center; color: #8a8a8a;font-size: 12px;">
-  Part of page is borrowed from <a href="https://wenht.xyz" style="color: black;">Hongtao WEN</a>.
+  Part of page is borrowed from <a href="https://hatimwen.github.io" style="color: black;">Hongtao WEN</a>.
 </p>
 
 <p style="text-align: center; color: #8a8a8a;font-size: 12px;">
